inserimento testo script

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esercitazione</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            document.getElementById("btn_cambia_testo").addEventListener("click", function () {
+                let nome = "Piero";
+                alert("Ciao " + nome);
+                console.log("Benvenuto nella funzione 'Callback'");
+                //    Utilizziamo JQUERY che dopo l'alert cambiara il contenuto del p con id="password"
+                $("#password").text("its2029");
+                $(".bordino").css("border", "1px solid red");
+
+            })
+            console.log("ready!");
+
+        });
+
+    </script>
+
 </head>
+
 <body>
 
-    <p>Messaggio</p>
-    
+    <button id="btn_cambia_testo">Cliccami per visualizzare password</button>
+    <div class="bordino">
+        <p id="password">********</p>
+    </div>
+
 </body>
+
 </html>
